fixed player2 HP bar alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,7 @@ header {
 #player2HPBar {
   position: absolute;
   top: 15px;
-  left: 50%;  
+  left: 51%;  
   width: 13.750em;
   height: 25px;
   border: 1px solid #fff;
